--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -21,6 +21,11 @@ block wrapper
       section.content
         h1 Купить шины CORDIANT в Ростове-на-Дону
       .category-counter.mb-4 1 840 товаров
+      .brand.d-flex.flex-wrap.bg-white.h-auto.p-3.mb-3
+        .col-xl-2.col-lg-3.d-flex.flex-column.align-items-center.justify-content-center.mb-3.mb-lg-0
+          +img('content/logo/logo-1.jpg','mb-3')
+          .h4.color-theme-brand Cordiant
+        .brand__desc.h4.col-xl-10.col-lg-9 Компания Bridgestone – мировой лидер по производству автомобильных шин. Зимние и летние автомобильные шины Бриджстоун — символ качества и безопасности. Шины Бриджстоун — это совершенные технологии, прошедшие проверку в самых жестких условиях. Шины Бриджстоун марки Potenza используются в гонках «Формулы-1». Продажа зимних и летних автошин Bridgestone, возможность осуществить выбор шин по марке автомобиля. Шины Бриджстоун — гарантия вашего безопасности и спокойствия.
       .row
         .col-xl-2.col-lg-3.mb-lg-4
           +brand('Cordiant', 'brand_category d-flex flex-column align-items-center justify-lg-content-center justify-content-between bg-white py-2 py-lg-3 px-3 mb-3', 'd-inline-block')
