--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -80,4 +80,5 @@ $grid-gutter-width: 8px;
 @import 'tpl/params';
 @import 'tpl/bubble';
 @import 'tpl/result';
+@import 'tpl/panel';
 @import 'tpl/footer';
