--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -168,8 +168,9 @@
 }
 
 .header__btn {
-  @extend %flex-item;
+  @extend %btn-default;
   @extend %btn-theme;
+  @extend %flex-item;
   padding: .5rem .688rem;
   letter-spacing: .03em;
 
@@ -184,18 +185,31 @@
   }
 
   &.header__btn_active {
-    z-index: 3;
-    position: relative;
-    border-radius: .5rem .5rem 0 0;
+    @include media-breakpoint-up(xl) {
+      z-index: 3;
+      position: relative;
+      border-radius: .5rem .5rem 0 0;
+    }
+
+    .header__btn-icon_show {
+      @include media-breakpoint-up(xl) {
+        display: none;
+      }
+    }
+
+    .header__btn-icon_close {
+      @include media-breakpoint-up(xl) {
+        display: block;
+      }
+    }
   }
 }
 
 .header__btn-icon {
   @include fw(18px);
-  display: none;
 
-  &.header__btn-icon_active {
-    display: block;
+  &.header__btn-icon_close {
+    display: none;
   }
 }
 
