--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -32,79 +32,138 @@ header.header
         +svg('logo')
       nav.header__nav.d-flex.align-items-center.justify-content-center
         .header__btn-holder.mr-3
-          a.header__btn.header__btn_active.text-uppercase(href="#")
-            +icon('menu','header__btn-icon mr-lg-2')
-            +icon('close','header__btn-icon header__btn-icon_active mr-lg-2')
-            span.d-none.d-sm-block Каталог
-          .panel.panel_visible
-            .panel__wrapper
+          button.header__btn.header__btn_type_toggler.text-uppercase(type="button" data-target="#categories")
+            +icon('menu','header__btn-icon header__btn-icon_show mr-lg-2')
+            +icon('close','header__btn-icon header__btn-icon_close mr-lg-2')
+            span.d-none.d-sm-block.pointer-events-none Каталог
+          .panel
+            #categories.panel__wrapper
+              button.panel__close.d-flex.align-items-center.d-xl-none.bg-theme-brand.color-theme-white(type="button")
+                +icon('close','h3 mr-2')
+                span.h4.text-uppercase каталог
               .wrapper
-                .row
-                  .panel__nav.col-md-2
-                    .panel__nav-item.mb-1
-                      a.panel__nav-link.px-3.py-2.mr-1(href="#")
+                .row.align-items-start
+                  .panel__nav.col-xl-2
+                    .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#tires")
+                      a.panel__nav-link.panel__nav-link_active.px-3.py-xl-2.mr-1(href="#")
                         +icon('tires','h3 color-theme-brand mr-2')
-                        span.h4 Автошины
+                        span.panel__nav-title.h4 Автошины
                       button.panel__nav-btn(type="button")
                         +icon('arrow-right','color-theme-brand')
-                    .panel__nav-item.mb-1
-                      a.panel__nav-link.px-3.py-2.mr-1(href="#")
+                    .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#moto")
+                      a.panel__nav-link.px-3.py-xl-2.mr-1(href="#")
                         +icon('moto','h3 color-theme-brand mr-2')
-                        span.h4 Мотошины
+                        span.panel__nav-title.h4 Мотошины
                       button.panel__nav-btn(type="button")
                         +icon('arrow-right','color-theme-brand')
-                    .panel__nav-item.mb-1
-                      a.panel__nav-link.px-3.py-2.mr-1(href="#")
+                    .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#wheels")
+                      a.panel__nav-link.px-3.py-xl-2.mr-1(href="#")
                         +icon('wheels','h3 color-theme-brand mr-2')
-                        span.h4 Диски
+                        span.panel__nav-title.h4 Диски
                       button.panel__nav-btn(type="button")
                         +icon('arrow-right','color-theme-brand')
-                    .panel__nav-item.mb-1
-                      a.panel__nav-link.px-3.py-2.mr-1(href="#")
+                    .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#battery")
+                      a.panel__nav-link.px-3.py-xl-2.mr-1(href="#")
                         +icon('battery','h3 color-theme-brand mr-2')
-                        span.h4 Аккумуляторы
+                        span.panel__nav-title.h4 Аккумуляторы
                       button.panel__nav-btn(type="button")
                         +icon('arrow-right','color-theme-brand')
-                    .panel__nav-item.mb-1
-                      a.panel__nav-link.px-3.py-2.mr-1(href="#")
+                    .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#detail")
+                      a.panel__nav-link.px-3.py-xl-2.mr-1(href="#")
                         +icon('detail','h3 color-theme-brand mr-2')
-                        span.h4 Автотовары
+                        span.panel__nav-title.h4 Автотовары
                       button.panel__nav-btn(type="button")
                         +icon('arrow-right','color-theme-brand')
-                    .panel__nav-item.mb-1
-                      a.panel__nav-link.px-3.py-2.mr-1(href="#")
+                    .panel__nav-item.px-3.px-xl-0.py-2.py-xl-0.mb-xl-1(data-target="#oil")
+                      a.panel__nav-link.px-3.py-xl-2.mr-1(href="#")
                         +icon('oil','h3 color-theme-brand mr-2')
-                        span.h4 Масла
+                        span.panel__nav-title.h4 Масла
                       button.panel__nav-btn(type="button")
                         +icon('arrow-right','color-theme-brand')
-                  .panel__grid.col-md-10
-                    .panel__content.px-4
-                      .h4.mb-4 Производители автошин:
-                      - var logolist = ['content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-1.jpg','content/logo/logo-2.jpg']
-                      .d-flex.flex-wrap.align-items-center.justify-content-between
+                  - var logolist = [{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'},{title:'Название бренда', img:'content/logo/logo-1.jpg'},{title:'Название бренда', img:'content/logo/logo-2.jpg'},{title:'Название бренда', img:'content/logo/logo-3.jpg'},{title:'Название бренда', img:'content/logo/logo-4.jpg'},{title:'Название бренда', img:'content/logo/logo-5.jpg'}]
+                  #tires.panel__grid.panel__grid_active.col-xl-10
+                    .panel__content.px-xl-4
+                      .h4.mb-4.d-none.d-xl-block Производители автошин:
+                      button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                        +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
+                        span.h5 Назад
+                      .panel__subcategory.mb-4.mb-xl-0
                         each logolist__item in logolist
-                          a.d-inline-block.mr-3.mb-4(href="#")
-                            +img(logolist__item)
-                      .text-center
+                          a.brand.brand_border_bottom.d-flex.align-items-center.justify-content-around.d-xl-inline-block.px-3.py-2.p-xl-0.mr-xl-3.mb-xl-4(href="#")
+                            span.d-inline-block.pl-3.pr-1.px-xl-0
+                              +img(logolist__item.img)
+                            span.h5.text-nowrap.d-block.d-xl-none!= logolist__item.title
+                      .text-center.d-none.d-xl-block
                         a.readmore(href="#")
-                          span.mr-2 Показать еще
-                          +icon('readmore','h3 color-theme-brand')
-                    .panel__aside.px-4
+                          span.mr-2.pointer-events-none Показать еще
+                          +icon('readmore','readmore__icon h3 color-theme-brand')
+                    .panel__aside.px-3.px-xl-4
                       .mb-4
                         a.toggler.py-1(href="#") Зимние шины
                         a.toggler.py-1(href="#") Летние шины
                         a.toggler.py-1(href="#") Шины для внедорожников
                         a.toggler.py-1(href="#") Всесезонные шины
                         a.toggler.py-1(href="#") Шины на Газель
-                      .banner.banner_sm.overflow-hidden
+                      .banner.banner_sm.overflow-hidden.mb-4.mb-xl-0
                         +img('content/banners/banner-2.jpg','img-cover')
-                        .banner__inner.py-4.px-5.d-flex.flex-column.align-items-center.justify-content-between
+                        .banner__inner.p-4.d-flex.flex-column.align-items-center.justify-content-between
                           .banner__title.h2.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
                           a.btn.text-uppercase(href="#") Подобрать
+                  #moto.panel__grid.col-xl-10
+                    .panel__content.px-xl-4
+                      .h4.mb-4.d-none.d-xl-block Производители мотошин:
+                      button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                        +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
+                        span.h5 Назад
+                      .panel__subcategory.mb-4.mb-xl-0
+                        each logolist__item in logolist
+                          a.brand.brand_border_bottom.d-flex.align-items-center.justify-content-around.d-xl-inline-block.px-3.py-2.p-xl-0.mr-xl-3.mb-xl-4(href="#")
+                            span.d-inline-block.pl-3.pr-1.px-xl-0
+                              +img(logolist__item.img)
+                            span.h5.text-nowrap.d-block.d-xl-none!= logolist__item.title
+                      .text-center.d-none.d-xl-block
+                        a.readmore(href="#")
+                          span.mr-2.pointer-events-none Показать еще
+                          +icon('readmore','readmore__icon h3 color-theme-brand')
+                    .panel__aside.px-3.px-xl-4
+                      .mb-4
+                        a.toggler.py-1(href="#") Летние шины
+                        a.toggler.py-1(href="#") Шины для внедорожников
+                        a.toggler.py-1(href="#") Зимние шины
+                        a.toggler.py-1(href="#") Всесезонные шины
+                      .banner.banner_sm.overflow-hidden.mb-4.mb-xl-0
+                        +img('content/banners/banner-2.jpg','img-cover')
+                        .banner__inner.p-4.d-flex.flex-column.align-items-center.justify-content-between
+                          .banner__title.h2.font-weight-bold.color-theme-white Подбор запчастей по VIN-коду
+                          a.btn.text-uppercase(href="#") Подобрать
+                  #wheels.panel__grid.col-xl-10
+                    .panel__content.px-xl-4
+                      .h4.mb-4.d-none.d-xl-block Производители дисков
+                      button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                        +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
+                        span.h5 Назад
+                  #battery.panel__grid.col-xl-10
+                    .panel__content.px-xl-4
+                      .h4.mb-4.d-none.d-xl-block Производители аккумуляторов
+                      button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                        +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
+                        span.h5 Назад
+                  #detail.panel__grid.col-xl-10
+                    .panel__content.px-xl-4
+                      .h4.mb-4.d-none.d-xl-block Производители автотоваров
+                      button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                        +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
+                        span.h5 Назад
+                  #oil.panel__grid.col-xl-10
+                    .panel__content.px-xl-4
+                      .h4.mb-4.d-none.d-xl-block Производители масел
+                      button.panel__toggler.d-flex.align-items-center.d-xl-none.px-3.py-2.border-bottom(type="button")
+                        +icon('arrow-left','h6 color-theme-brand pl-3 mr-2')
+                        span.h5 Назад
         .header__btn-holder
           a.header__btn.text-uppercase(href="#")
-            +icon('services','header__btn-icon header__btn-icon_active mr-lg-2')
-            +icon('close','header__btn-icon mr-lg-2')
+            +icon('services','header__btn-icon header__btn-icon_show mr-lg-2')
+            +icon('close','header__btn-icon header__btn-icon_close mr-lg-2')
             span.d-none.d-sm-block Услуги
     .header__col.header__col_search.col-xl-3.mb-3
       form.search(action="#" method="post")
