feature/panel, pt. 3

--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -128,12 +128,12 @@ block wrapper
         .cart-summary
           .desclist.mb-3
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-7 Доставка в ваш город:
+              .desclist__title.h6.text-oneline.px-0.col-md-7 Доставка в ваш город:
               .h3.col-md-5.text-right.text-md-left
                 span.font-weight-bold 750&nbsp;
                 | ₽
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-7 Итого:
+              .desclist__title.h6.text-oneline.px-0.col-md-7 Итого:
               .h3.col-md-5.text-right.text-md-left
                 span.font-weight-bold 79 337.12&nbsp;
                 | ₽
