--- a/src/pug/checkout.pug
+++ b/src/pug/checkout.pug
@@ -83,33 +83,33 @@ block wrapper
                   | ₽
           .desclist.border-bottom.px-md-4.px-3.pt-md-3.pb-md-4.py-3
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-6 Товаров на:
+              .desclist__title.h6.text-oneline.px-0.col-md-6 Товаров на:
               .h3.col-md-6
                 span.font-weight-bold 29 337.12&nbsp;
                 | ₽
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-6 Общий вес:
+              .desclist__title.h6.text-oneline.px-0.col-md-6 Общий вес:
               .h3.col-md-6
                 span.font-weight-bold 114&nbsp;
                 | кг
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-6 Доставка:
+              .desclist__title.h6.text-oneline.px-0.col-md-6 Доставка:
               .h3.col-md-6
                 span.font-weight-bold 750&nbsp;
                 | ₽
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-6 Списание бонусов:
+              .desclist__title.h6.text-oneline.px-0.col-md-6 Списание бонусов:
               .h3.col-md-6
                 span.font-weight-bold 250&nbsp;
                 | ₽
             .d-flex.align-items-center
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-6 Скидка по промокоду:
+              .desclist__title.h6.text-oneline.px-0.col-md-6 Скидка по промокоду:
               .h3.col-md-6
                 span.font-weight-bold 300&nbsp;
                 | ₽
           .desclist.px-md-4.px-3.py-3
             .d-flex.align-items-center
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-6 Итого к оплате:
+              .desclist__title.h6.text-oneline.px-0.col-md-6 Итого к оплате:
               .h3.col-md-6.color-theme-brand
                 span.font-weight-bold 79 337.12&nbsp;
                 | ₽
