--- a/src/pug/personal-booking.pug
+++ b/src/pug/personal-booking.pug
@@ -10,16 +10,16 @@ block personal
       .h3.font-weight-bold.color-theme-brand.mb-3 Вы записаны на шиномонтаж
       .desclist
         .d-flex.align-items-center.mb-1
-          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Номер записи:
+          .desclist__title.h6.text-oneline.px-0.col-xl-2.col-sm-3 Номер записи:
           .h3.font-weight-bold.col-xl-10.col-sm-9 49409
         .d-flex.align-items-center.mb-1
-          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Адрес:
+          .desclist__title.h6.text-oneline.px-0.col-xl-2.col-sm-3 Адрес:
           .h5.col-xl-10.col-sm-9 ул. Доватора, 11
         .d-flex.align-items-center.mb-1
-          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Дата:
+          .desclist__title.h6.text-oneline.px-0.col-xl-2.col-sm-3 Дата:
           .h5.col-xl-10.col-sm-9 10 января 2021 г.
         .d-flex.align-items-center.mb-1
-          .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Время:
+          .desclist__title.h6.text-oneline.px-0.col-xl-2.col-sm-3 Время:
           .h5.col-xl-10.col-sm-9 11 : 00
     .px-lg-5.px-md-4.px-3.pb-3
       .row
