--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -87,36 +87,36 @@ block wrapper
             .col-xl-3.col-md-4.mb-4.mb-md-0
               .desclist
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Артикул
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Артикул
                   .h5.bg-theme-white.py-1.pl-1.zi-2 1874100
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Ширина
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Ширина
                   .h5.bg-theme-white.py-1.pl-1.zi-2 235″
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Высота
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Высота
                   .h5.bg-theme-white.py-1.pl-1.zi-2 60 мм
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Диаметр
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Диаметр
                   .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 17″
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Сезон
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Сезон
                   .h5.d-flex.align-items-center.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2
                     +icon('summer','h5 mr-1')
                     | Лето
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Производитель
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Производитель
                   .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 PIRELLI
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Модель
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Модель
                   .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 P-ZERO
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Типоразмер
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Типоразмер
                   .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 235/60R17
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Тип
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Тип
                   .h5.bg-theme-white.color-theme-brand.py-1.pl-2.zi-2 Легковые
                 .desclist__border.d-flex.align-items-center.justify-content-between
-                  .desclist__title.h6.d-block.overflow-hidden.bg-theme-white.py-1.pr-2.zi-2 Индекс нагрузки
+                  .desclist__title.h6.text-oneline.bg-theme-white.py-1.pr-2.zi-2 Индекс нагрузки
                   .h5.bg-theme-white.py-1.pl-1.zi-2 102 (850 кг)
             .col-xl-8.col-md-7.d-flex.flex-column.justify-content-between.offset-md-1
               .content
