--- a/src/pug/ui_modals.pug
+++ b/src/pug/ui_modals.pug
@@ -59,10 +59,10 @@ block footer
           .h5.mb-4 Вы можете следить за выполнением своего заказа в личном кабинете. Либо Вы можете получать информацию удобных для вас месенджерах, сообщив нам номер своего заказа.
           .desclist
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Номер заказа:
+              .desclist__title.h6.text-oneline.px-0.col-xl-2.col-sm-3 Номер заказа:
               .h5.col-xl-10.col-sm-9 49409
             .d-flex.align-items-center.mb-1
-              .desclist__title.h6.d-block.overflow-hidden.px-0.col-xl-2.col-sm-3 Дата:
+              .desclist__title.h6.text-oneline.px-0.col-xl-2.col-sm-3 Дата:
               .h5.col-xl-10.col-sm-9 07.06.202
         .px-4
           .row.align-items-center.zi-2
