--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -155,7 +155,7 @@
 .header__btn-title {
   color: $color__link;
   overflow: hidden;
-  //text-overflow: ellipsis;
+  text-overflow: ellipsis;
   line-height: 1.25rem;
 
   &:hover {
