--- a/src/pug/checkout__delivery.pug
+++ b/src/pug/checkout__delivery.pug
@@ -22,13 +22,13 @@ block checkout
         .d-none.d-sm-block Изменить
     .desclist.desclist.px-md-4.px-3.py-md-4.py-3
       .d-flex.align-items-center.mb-1
-        .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-4 Ваше имя:
+        .desclist__title.h6.text-oneline.px-0.col-md-4 Ваше имя:
         .h5.col-md-8 Сергей
       .d-flex.align-items-center.mb-1
-        .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-4 Номер телефона:
+        .desclist__title.h6.text-oneline.px-0.col-md-4 Номер телефона:
         .h5.col-md-8 +7 (989) 726-18-85
       .d-flex.align-items-center
-        .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-4 E-mail:
+        .desclist__title.h6.text-oneline.px-0.col-md-4 E-mail:
         .h5.col-md-8 glumglam@gmail.com
   form.section.py-0.mb-3(action="#")
     .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
