feature/panel, final

--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -169,6 +169,18 @@ block wrapper
           +svg('photo')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('detail')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('services-tires')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('services-store')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('services-aircond')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('services-wheel-rolled')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('services-wheel-painted')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('services-vin')
     .col-md-3
       .d-flex.flex-column
         .h2.font-weight-bold.mb-2 Шрифт
@@ -342,5 +354,17 @@ block wrapper
           span.h1.ds-icon-photo
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-detail
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-services-tires
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-services-store
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-services-aircond
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-services-wheel-rolled
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-services-wheel-painted
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-services-vin
 
 block footer
