--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -64,29 +64,35 @@ $ds-icon-reviews: "\e93b";
 $ds-icon-scales: "\e93c";
 $ds-icon-search: "\e93d";
 $ds-icon-services: "\e93e";
-$ds-icon-settings: "\e93f";
-$ds-icon-share: "\e940";
-$ds-icon-shield: "\e941";
-$ds-icon-spikes: "\e942";
-$ds-icon-steel-path1: "\e943";
-$ds-icon-steel-path2: "\e944";
-$ds-icon-summer: "\e945";
-$ds-icon-target: "\e946";
-$ds-icon-tg: "\e947";
-$ds-icon-tg-filled: "\e948";
-$ds-icon-tile: "\e949";
-$ds-icon-time: "\e94a";
-$ds-icon-tires: "\e94b";
-$ds-icon-tool: "\e94c";
-$ds-icon-trash: "\e94d";
-$ds-icon-user: "\e94e";
-$ds-icon-view: "\e94f";
-$ds-icon-vk: "\e950";
-$ds-icon-wallet: "\e951";
-$ds-icon-wapp: "\e952";
-$ds-icon-wapp-filled: "\e953";
-$ds-icon-warranty: "\e954";
-$ds-icon-wheels: "\e955";
-$ds-icon-winter: "\e956";
-$ds-icon-youtube: "\e957";
-$ds-icon-zoom: "\e958";
+$ds-icon-services-aircond: "\e93f";
+$ds-icon-services-store: "\e940";
+$ds-icon-services-tires: "\e941";
+$ds-icon-services-vin: "\e942";
+$ds-icon-services-wheel-painted: "\e943";
+$ds-icon-services-wheel-rolled: "\e944";
+$ds-icon-settings: "\e945";
+$ds-icon-share: "\e946";
+$ds-icon-shield: "\e947";
+$ds-icon-spikes: "\e948";
+$ds-icon-steel-path1: "\e949";
+$ds-icon-steel-path2: "\e94a";
+$ds-icon-summer: "\e94b";
+$ds-icon-target: "\e94c";
+$ds-icon-tg: "\e94d";
+$ds-icon-tg-filled: "\e94e";
+$ds-icon-tile: "\e94f";
+$ds-icon-time: "\e950";
+$ds-icon-tires: "\e951";
+$ds-icon-tool: "\e952";
+$ds-icon-trash: "\e953";
+$ds-icon-user: "\e954";
+$ds-icon-view: "\e955";
+$ds-icon-vk: "\e956";
+$ds-icon-wallet: "\e957";
+$ds-icon-wapp: "\e958";
+$ds-icon-wapp-filled: "\e959";
+$ds-icon-warranty: "\e95a";
+$ds-icon-wheels: "\e95b";
+$ds-icon-winter: "\e95c";
+$ds-icon-youtube: "\e95d";
+$ds-icon-zoom: "\e95e";
