--- a/src/scss/icons/style.scss
+++ b/src/scss/icons/style.scss
@@ -496,3 +496,34 @@
     content: $ds-icon-detail;
   }
 }
+
+.ds-icon-services-aircond {
+  &:before {
+    content: $ds-icon-services-aircond; 
+  }
+}
+.ds-icon-services-store {
+  &:before {
+    content: $ds-icon-services-store; 
+  }
+}
+.ds-icon-services-tires {
+  &:before {
+    content: $ds-icon-services-tires; 
+  }
+}
+.ds-icon-services-vin {
+  &:before {
+    content: $ds-icon-services-vin; 
+  }
+}
+.ds-icon-services-wheel-painted {
+  &:before {
+    content: $ds-icon-services-wheel-painted; 
+  }
+}
+.ds-icon-services-wheel-rolled {
+  &:before {
+    content: $ds-icon-services-wheel-rolled; 
+  }
+}
